# HAL-common

./: BCD.hpp  BitTools.hpp  CMakeLists.txt  DateTime.cpp  DateTime.hpp  Direction.hpp  Duration.hpp  EnumStringMap.hpp  Event.cpp  Event.hpp  EventLoop.cpp  EventLoop.hpp  Fixed16.cpp  Fixed16.hpp  Flags.hpp  FreeMemory.hpp  GPIO.hpp  IntegerMath.hpp  InterruptLock.hpp  README.md  Reset.hpp  RingBuffer.hpp  SerialLine.hpp  SerialLineBuffer.cpp  SerialLineBuffer.hpp  SerialLineShell.cpp  SerialLineShell.hpp  SerialLineStringWriter.cpp  SerialLineStringWriter.hpp  StatusTools.hpp  String.cpp  String.hpp  StringTokenizer.cpp  StringTokenizer.hpp  StringWriter.hpp  Timer.hpp  Timestamp.hpp  Watchdog.hpp  WireMaster.hpp  WireMasterChip.hpp  (+2 more)
event/: Data.hpp  Entry.hpp  Loop.cpp  Loop.hpp
